--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
 
             <div>
                 <h4>Distance</h6>
-                    <input type="number" name="ambuLoc" id="ambuDist" class="form__field" placeholder="Enter Ambulance Location"/>
+                    <input type="number" name="ambuLoc" id="ambuDist" class="form__field" placeholder="Enter Ambulance Distance"/>
 
             </div>
             <div>
                 <h4>Signal Lane</h6>
-                    <input type="number" name="sigLoc" id="sigLane" placeholder="Enter Signal Location"/>
+                    <input type="number" name="sigLoc" id="sigLane" placeholder="Enter Signal Lane"/>
 
             </div>
             <div>
                 <button class="btn" onclick="button()">Update Signal</button>
             </div>
             <div class="signal">
-            <p>Signal 1: &nbsp;&nbsp;<button id="signal1"></button></p>
+            <p>Signal 1:&nbsp;&nbsp;<button id="signal1"></button></p>
             <p>Signal 2:&nbsp;&nbsp;<button id="signal2"></button></p>
             <p>Signal 3:&nbsp;&nbsp;<button id="signal3"></button></p>
             <p>Signal 4:&nbsp;&nbsp;<button id="signal4"></button></p>
